<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu -->
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>

    <!-- Basics, toasts and utility -->
    <string name="app_name">aRGENTeaM</string>
    <string name="search_hint">search movie, tv serie, actor, director</string>
    <string name="stubportrait">stubportrait</string>
    <string name="stublandscape">stublandscape</string>
    <string name="sininternet">Without Internet</string>
    <string name="sinportal">No aRGENTeaM access or you just don\'t have Internet enabled on this device</string>
    <string name="sinp2papp">There\'s no P2P app installed to fulfill this request. Uncheck \"P2P off\" in Settings or install a proper P2P app</string>
    <string name="sintorrent">No Intenet access or bad torrent parameters in Settings</string>
    <string name="torrentsendedok">Magnet Link sent OK to your torrent app</string>
    <string name="sinemule">No network access or bad ed2k parameters in Settings</string>
    <string name="sinemuleiniciado">Bad ed2k parameters in Settings or ed2k app is not started to receive the elink</string>
    <string name="emulesendedok">Elink sent OK to your ed2k app</string>
    <string name="nodirsubs">Set subtitles path before download in Settings</string>

    <!-- GCM -->
    <string name="error_config">Error config</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>

    <!-- menu array -->
    <string-array name="menu_array">
        <item>Movie releases</item>
        <item>TV Series releases</item>
        <item>Movies subtitles being translated</item>
        <item>TV Series subtitles being translated</item>
        <item>My spanish subtitles</item>
        <item>Facebook Official News Page</item>
    </string-array>

    <string name="pathsubstitle">Click this preference to set your path</string>
    <string name="notifpeli">If "On" you will receive notifications of new movie subtitles</string>
    <string name="notifpeliring">Choose notification sound</string>
    <string name="notifpeliringtitle">Notification sound</string>
    <string name="notifpeliled">Lights the LED if your device has the feature </string>
    <string name="notifpeliledtitle">Configure movie notification LED color </string>
    <string name="notiftv">If "On" you will receive notifications of new TV Series subtitles</string>
    <string name="notiftvring">Choose notification sound</string>
    <string name="notiftvringtitle">Notification sound</string>
    <string name="notiftvled">Lights the LED if your device has the feature</string>
    <string name="notiftvledtitle">Configure TV series notification LED color</string>
    <string name="vibraofftitle">Vibration</string>
    <string name="p2p">Activating this switch you will send torrent magnet links and ed2k links to Android (TM) 3rd party apps on your device.</string>
    <string name="p2ptitle">P2P parameters off</string>
    <string name="passemultitle">eMule password</string>
    <string name="passemule">Your eMule password</string>
    <string name="portemuletitle">eMule port</string>
    <string name="portemule">By default you have to put here \'4711\' if you never changed it on eMule.</string>
    <string name="webserveremuletitle">Your eMule/aMule web server DNS or IP</string>
    <string name="webserveremule">Examples: \'192.168.1.100\' o \'mipc.no-ip.org\'</string>
    <string name="webservertorrenttitle">Your uTorrent/BitTorrent web server DNS o IP</string>
    <string name="webservertorrent">Examples: \'192.168.1.100\' o \'mipc.no-ip.org\'</string>
    <string name="porttorrent">The port that you configured on Preferences -> Web Interface</string>
    <string name="usertorrenttitle">uTorrent/BitTorrent user</string>
    <string name="usertorrent">Your uTorrent/BitTorrent user</string>
    <string name="passtorrenttitle">uTorrent/BitTorrent password</string>
    <string name="passtorrent">Your uTorrent/BitTorrent password</string>
    <string name="ftpservertitle">DNS or IP of your FTP server</string>
    <string name="ftpserver">Examples: \'192.168.1.100\' o \'ftp://mipc.no-ip.org\'</string>
    <string name="puertoftptitle">Your FTP server port</string>
    <string name="puertoftp">FTP server port. By default always is 21. If you leave this empty it will assume your port is 21</string>
    <string name="directorioftptitle">Your FTP server videos folder</string>
    <string name="directorioftp">Your FTP server destination folder</string>
    <string name="passftp">Your FTP server password</string>
    <string name="titlepassftp">FTP password</string>
    <string name="titleuserftp">FTP user</string>
    <string name="userftp">Your FTP Server user</string>
    <string name="pathsubscategory">Subtitles download directory</string>
    <string name="notifcategory">Movie Notifications</string>
    <string name="notiftvcategory">TV Series Notifications</string>
    <string name="vibraoffcategory">Notifications Vibration</string>
    <string name="vibraoff">Did you want that your device vibrate on any notification?</string>
    <string name="p2pcategory">Internal or External P2P app</string>
    <string name="emucategory">eMule configuration</string>
    <string name="ftpservercategory">Send subtitles to your FTP video server</string>
    <string name="torrentcategory">utorrent/bittorrent web interface configuration</string>
    <string name="porttorrenttitle">uTorrent/BitTorrent port</string>
    <string name="publishedon">Published:</string>
    <string name="plot">Plot</string>
    <string name="downloadsubs">Download subtitles</string>
    <string name="downloadtorrents">Download torrents</string>
    <string name="downloademule">Download eMuLe</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="sended2k">Sending eMuLe link</string>
    <string name="sendtorrent">Sending torrent link</string>
    <string name="sinfacebook">There is a problem connecting to Facebook. Please, try again later.</string>
    <string name="title_activity_trakt">TraktActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="ticker">New %1$s subtitle in aRGENTeaM</string>
    <string name="searching">Searching \' %1$s \'</string>
    <string name="nothing">No coincidences found</string>
    <string name="sharefriend">Share this app to a friend</string>
    <string name="lookthisapp">Hey!!! Look this Android app !!!</string>
    <string name="trailer">Trailer</string>
    <string name="season">Season</string>


</resources>