<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pathsubscategory">
        <Preference
            android:key="pathsubs"
            android:title="@string/pathsubstitle">
            </Preference>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifcategory">
        <ar.com.martinrevert.argenteam.CustomSwitchPreference
            android:defaultValue="true"
            android:key="movieoff"
            android:summary="@string/notifpeli"
            />
        <RingtonePreference
            android:key="prefRingtonemovie"
            android:ringtoneType="notification"
            android:summary="@string/notifpeliring"
            android:title="@string/notifpeliringtitle" />
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff6699cc"
            android:key="ledMovie"
            android:summary="@string/notifpeliled"
            android:title="@string/notifpeliledtitle" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notiftvcategory">
        <ar.com.martinrevert.argenteam.CustomSwitchPreference
            android:defaultValue="true"
            android:key="tvoff"
            android:summary="@string/notiftv"
        />
        <RingtonePreference
            android:key="prefRingtonetv"
            android:ringtoneType="notification"
            android:summary="@string/notiftvring"
            android:title="@string/notiftvringtitle" />
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff6699cc"
            android:key="ledTV"
            android:summary="@string/notiftvled"
            android:title="@string/notiftvledtitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/vibraoffcategory">
        <ar.com.martinrevert.argenteam.CustomSwitchPreference
            android:defaultValue="true"
            android:key="vibraoff"
            android:summary="@string/vibraoff"
            android:title="@string/vibraofftitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p2pcategory">
        <ar.com.martinrevert.argenteam.CustomSwitchPreference
            android:key="p2p"
            android:summary="@string/p2p"
            android:title="@string/p2ptitle"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/emucategory">
        <EditTextPreference
            android:key="webserver"
            android:summary="@string/webserveremule"
            android:title="@string/webserveremuletitle" />

        <EditTextPreference
            android:key="puerto"
            android:summary="@string/portemule"
            android:title="@string/portemuletitle"
            android:numeric="integer"/>

        <EditTextPreference
            android:key="password"
            android:password="true"
            android:summary="@string/passemule"
            android:title="@string/passemultitle" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/torrentcategory">
        <EditTextPreference
            android:key="webservertorrent"
            android:summary="@string/webservertorrent"
            android:title="@string/webservertorrenttitle"
            />

        <EditTextPreference
            android:key="puertotorrent"
            android:numeric="integer"
            android:summary="@string/porttorrent"
            android:title="@string/porttorrenttitle" />

        <EditTextPreference
            android:key="usuariotorrent"
            android:summary="@string/usertorrent"
            android:title="@string/usertorrenttitle" />

        <EditTextPreference
            android:key="passwordtorrent"
            android:password="true"
            android:summary="@string/passtorrent"
            android:title="@string/passtorrenttitle" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ftpservercategory">
        <EditTextPreference
            android:key="ftpserver"
            android:summary="@string/ftpserver"
            android:title="@string/ftpservertitle" />

        <EditTextPreference
            android:key="puertoftp"
            android:numeric="integer"
            android:summary="@string/puertoftp"
            android:title="@string/puertoftptitle" />

        <EditTextPreference
            android:key="directorioftp"
            android:summary="@string/directorioftp"
            android:title="@string/directorioftptitle" />

        <EditTextPreference
            android:key="userftp"
            android:summary="@string/userftp"
            android:title="@string/titleuserftp" />

        <EditTextPreference
            android:key="passwordftp"
            android:password="true"
            android:summary="@string/passftp"
            android:title="@string/titlepassftp" />

    </PreferenceCategory>

</PreferenceScreen>