<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:argenteam="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_action_action_search"
            android:orderInCategory="1"
            android:title="@string/search"
            android:visible="true"
            argenteam:showAsAction="ifRoom" >
        </item>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_action_social_share"
            android:orderInCategory="3"
            android:title="@string/share"
            android:visible="true"
            >
        </item>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_action_settings"
            android:orderInCategory="2"
            android:title="@string/settings"
            android:visible="true"
           >
        </item>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_action_action_about"
            android:orderInCategory="4"
            android:title="@string/about"
            android:visible="true"
               >
        </item>
    </group>

</menu>